--- a/src/assets/css/rest.css
+++ b/src/assets/css/rest.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -41,6 +42,10 @@ blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
+}
+a{
+	text-decoration: none;
+	color: #fff;
 }
 table {
 	border-collapse: collapse;
