--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,3 +5,14 @@ body,
   height: 100%;
   overflow: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* 滚动条的滑块 */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #3f51b5, transparent);
+  border-radius: 3px;
+}
